--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@solace-community/eventportal",
-  "version": "1.0.0",
+  "version": "1.0.2",
   "description": "This is a wrapper to Solace PubSub+ Event Portal REST API",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
